deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-nginx-example
  namespace: default
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: k8s-nginx-example
