deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-nginx-example-minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "my.app.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8s-nginx-example
            port:
              number: 80
  # - http:
  #     paths:
  #     - path: /test
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: k8s-nginx-example
  #           port:
  #             number: 80
